tests/paczka1/fuzzy1/21227155.err
Error in line 18: foq5rm73sT A717 62,1
Error in line 26: MHgHltJpdso A717 71,1
Error in line 27: MHgHltJpdso A622 13,1
Error in line 28: MHgHltJpdso A717 55,7
Error in line 30: MHgHltJpdso S793 21,9
